--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,12 +1,40 @@
+@font-face {
+  font-family: RobotoCondensed;
+  src: url(assets/roboto-condensed.light.ttf);
+  font-weight: 800;
+}
+
+@font-face {
+  font-family: EconomicaBold;
+  src: url(assets/economica-bold.ttf);
+}
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: 'RobotoCondensed';
+  font-size: 18px;
   width: '100vw';
   height: '100vh';
+  overflow: hidden;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5 {
+  font-family: 'EconomicaBold';
 }
 
 .marker {
   transform: translate(-50%, -100%);
+}
+
+.popup {
+  max-width: 300px;
+  padding-left: 3%;
+}
+
+.visitedOn {
+  opacity: 0.65;
 }
